kubernetes/apps/stealth-gateway/stealth-gateway/app/ciliumnetworkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: downloads-gateway-pod-gateway
  namespace: network
  labels:
    app.kubernetes.io/instance: downloads-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: downloads-gateway
      app.kubernetes.io/name: pod-gateway

  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
            - port: "1637"
              protocol: UDP
    - toEntities:
        - cluster

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pod-gateway-vxlan
  namespace: network
  labels:
    app.kubernetes.io/instance: downloads-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: downloads-gateway
      app.kubernetes.io/name: pod-gateway
  egress:
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
  ingress:
    - toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
