kubernetes/apps/stealth-gateway/stealth-gateway/app/webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: stealth-gateway-pod-gateway
  annotations:
    cert-manager.io/inject-ca-from: stealth-gateway/stealth-gateway-pod-gateway-webhook-tls
webhooks:
  - name: stealth-gateway-pod-gateway.svc.cluster.local
    namespaceSelector:
      matchLabels:
        stealth-gateway: "true"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
        scope: Namespaced
    clientConfig:
      service:
        namespace: stealth-gateway
        name: stealth-gateway-pod-gateway-webhook
        path: /wh/mutating/setgateway
        port: 8080
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 10
